[package]
name = "admiral_bumblebot"
version = "0.69.420"
authors = ["Linus <torvalds@linux-foundation.org>"]
edition = "2018"

[dependencies.serenity]
default-features = false
features = ["builder", "cache", "client", "gateway", "model", "native_tls_backend"]
version = "0.12.5"

[dependencies]
tokio = { version = "1.49.0", features = ["rt-multi-thread"] }
regex = "1.12.2"
dotenvy = "0.15.7"
serde = "1.0.228"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
similar = "2.7.0"
redb = "3.1.0"
bincode = "=1.3.3"
rand = "0.8"
